# kv-quantization-alignment

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
analysis/: compute_pcr.py  cross_benchmark.py  generate_tables.py  identify_critical_layers.py  run_divergence_analysis.py  run_second_classifier.py
core/: __init__.py  classifier.py  generation.py  metrics.py  model_loader.py  prompts.py  quantization.py  results.py
data/prompts/: jailbreak.txt  privacy.txt  refusal.txt
docs/: ANNOTATION_RUBRIC.md  EXPERIMENT_GUIDE.md  VERIFICATION.md
experiments/: run_activation_analysis.py  run_attention_analysis.py  run_channel_ablation.py  run_cumulative.py  run_determinism.py  run_group64.py  run_ifeval.py  run_kivi.py  run_kv_asymmetric.py  run_layer_ablation.py  run_mitigation.py  run_multi_turn.py  run_naive_baselines.py  run_pcr_prediction.py  run_perplexity.py  run_protection_sweep.py  run_spec_decoding.py  run_sweep.py  run_system_prompt.py  run_temperature.py  run_vllm_deployment.py
tests/: test_integration.py  test_preflight.py  test_wildguard.py
